--- a/send.html
+++ b/send.html
@@ -11,6 +11,19 @@
 <body>
     <div class="ll">
     <h1 class="ss">小笨蛋寶貝我怕妳忘記怎麼寄貨</h1>
+    <br>
+    <h1>收件者資訊</h1>
+    <h1>寄件者資訊</h1>
+    <h1>寄件者姓名:林庭亦</h1>
+    <h1>寄件者電話:0908901630</h1>
+    <br>
+    <h1>收件者資訊</h1>
+    <h1>收件者姓名:曾彥誠</h1>
+    <h1>收件者電話:0966990266</h1>
+    <h1>地址:7-11欣昌隆門市</h1>
+    <h1>地址:931屏東縣佳冬鄉大豐路680號7-ELEVEN 欣昌隆門市</h1>
+    <h1>ㄚ我要小皮筋ㄡ.w.</h1>
+    <br>
     <h1>step:1</h1>
     <img src="1.jpg" width="500"></img>
     <h1>step:2</h1>
